# mgxhub-rs

./: .gitignore  CONVERT1_USAGE.md  Cargo.toml  Dockerfile  README.md  demo.html  es_mapping.json  es_mapping_ik.json  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
src/: main.rs
