[package]
name = "mgxhub"
version = "0.1.8"
edition = "2021"
authors = ["daoyu<lichifeng@qq.com>"]
description = "aocrec.com api server"

[[bin]]
name = "mgxhub"
path = "src/main.rs"

[[bin]]
name = "convert1"
path = "src/bin/convert1.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "tokio", "macros"] }
mgx = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elasticsearch = "8.17.0-alpha.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio-util = "0.7"
zip = "2.2"
flate2 = "1.0"
chrono = "0.4.39"
tower-http = { version = "0.6.2", features = ["cors"] }
url = "2.5.4"
